# cjm-context-graph-layer

./: README.md  declare.html  declare.html.md  edits.html  edits.html.md  grammar.html  grammar.html.md  identity.html  identity.html.md  index.html  ops.html  ops.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
cjm_context_graph_layer/: _modidx.py  declare.py  edits.py  grammar.py  identity.py  journal.py  ops.py  rebuild.py
nbs/: declare.ipynb  edits.ipynb  grammar.ipynb  identity.ipynb  index.ipynb  nbdev.yml  ops.ipynb
tests/: test_declare.py  test_edits.py  test_grammar.py  test_identity.py  test_ops.py  test_replay_compose.py
tests_manual/: stage5_decision_preservation_drill.py  validate_stage5_layer_e2e.py
